updated sample resstock files

--- a/notebook/user_tutorial.ipynb
+++ b/notebook/user_tutorial.ipynb
@@ -80,14 +80,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'Dwelling' from 'ochre' (unknown location)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\mblonsky\\Github\\OCHRE\\notebook\\user_tutorial.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/mblonsky/Github/OCHRE/notebook/user_tutorial.ipynb#W5sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39msys\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/mblonsky/Github/OCHRE/notebook/user_tutorial.ipynb#W5sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m sys\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mappend(\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m\u001b[39mC:\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mUsers\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mmblonsky\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mGithub\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mOCHRE\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mochre\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/mblonsky/Github/OCHRE/notebook/user_tutorial.ipynb#W5sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mochre\u001b[39;00m \u001b[39mimport\u001b[39;00m Dwelling\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/mblonsky/Github/OCHRE/notebook/user_tutorial.ipynb#W5sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mochre\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m default_input_path  \u001b[39m# for using sample files\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/mblonsky/Github/OCHRE/notebook/user_tutorial.ipynb#W5sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m simulation_name \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mSample House\u001b[39m\u001b[39m'\u001b[39m\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'Dwelling' from 'ochre' (unknown location)"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import datetime as dt\n",
     "import pandas as pd\n",
     "\n",
+    "import sys\n",
+    "sys.path.append(r'C:\\Users\\mblonsky\\Github\\OCHRE\\ochre')\n",
     "from ochre import Dwelling\n",
     "from ochre.utils import default_input_path  # for using sample files\n",
     "\n",
@@ -95,7 +109,7 @@
     "\n",
     "dwelling_args = {\n",
     "    # Timing parameters\n",
-    "    'start_time': dt.datetime(2018, 7, 1, 0, 0),  # year, month, day, hour, minute\n",
+    "    'start_time': dt.datetime(2018, 1, 1, 0, 0),  # year, month, day, hour, minute\n",
     "    'time_res': dt.timedelta(minutes=10),         # time resolution of the simulation\n",
     "    'duration': dt.timedelta(days=3),             # duration of the simulation\n",
     "\n",
@@ -259,7 +273,7 @@
    "source": [
     "#### <a name=\"hvac-control\"></a>Time-based HVAC setpoint control\n",
     "\n",
-    "This control will increase the cooling setpoint by 1C from 5-9PM each day.\n",
+    "This control will reduce the heating setpoint by 1C from 5-9PM each day.\n",
     "\n",
     "We use the same house model as above."
    ]
@@ -276,13 +290,13 @@
     "dwelling = Dwelling(name=simulation_name, **dwelling_args)\n",
     "\n",
     "# Get HVAC heater setpoints\n",
-    "cooler = dwelling.get_equipment_by_end_use('HVAC Cooling')\n",
-    "setpoints = cooler.schedule['HVAC Cooling Setpoint (C)']\n",
+    "heater = dwelling.get_equipment_by_end_use('HVAC Heating')\n",
+    "setpoints = heater.schedule['HVAC Heating Setpoint (C)']\n",
     "\n",
-    "# Increase cooling setpoint by 1C from 5-9PM\n",
+    "# Reduce heating setpoint by 1C from 5-9PM\n",
     "peak_times = setpoints.between_time(dt.time(17, 0, 0), dt.time(21, 0, 0), inclusive='left').index\n",
-    "setpoints.loc[peak_times] += 1\n",
-    "cooler.reset_time()  # resets the schedule\n",
+    "setpoints.loc[peak_times] -= 1\n",
+    "heater.reset_time()  # resets the schedule\n",
     "\n",
     "# Run simulation\n",
     "df, hourly, metrics = dwelling.simulate()\n",
@@ -290,7 +304,7 @@
     "# Plot HVAC power and indoor temperature for baseline and control cases\n",
     "data = {'Baseline': df_baseline,\n",
     "        'Control': df}\n",
-    "plot_info = [('HVAC Cooling Electric Power (kW)', 'Cooling Power', 'r'),\n",
+    "plot_info = [('HVAC Heating Electric Power (kW)', 'Heating Power', 'r'),\n",
     "             ('Temperature - Indoor (C)', 'Indoor Temperature', 'k', False)]\n",
     "fig, (ax1, ax2) = CreateFigures.multi_comparison_plot(data, plot_info)\n",
     "ax1.set_ylabel('Power (kW)')\n",
@@ -309,20 +323,20 @@
     "dwelling = Dwelling(name=simulation_name, **dwelling_args)\n",
     "\n",
     "# Get HVAC heater and initial setpoint\n",
-    "cooler = dwelling.get_equipment_by_end_use('HVAC Cooling')\n",
+    "heater = dwelling.get_equipment_by_end_use('HVAC Heating')\n",
     "\n",
     "# Run OCHRE simulation in for loop\n",
     "for t in dwelling.sim_times:\n",
     "    assert dwelling.current_time == t\n",
     "\n",
-    "    # Get HVAC cooling setpoint, increase by 1C from 5-9PM\n",
-    "    setpoint = cooler.schedule.loc[t, 'HVAC Cooling Setpoint (C)']  # Original setpoint for current time\n",
+    "    # Get HVAC heating setpoint, reduce by 1C from 5-9PM\n",
+    "    setpoint = heater.schedule.loc[t, 'HVAC Heating Setpoint (C)']  # Original setpoint for current time\n",
     "    if 17 <= t.hour <= 21:\n",
-    "        setpoint += 1\n",
+    "        setpoint -= 1\n",
     "\n",
     "    # Set the external control signal\n",
     "    control_signal = {\n",
-    "        'HVAC Cooling': {\n",
+    "        'HVAC Heating': {\n",
     "            'Setpoint': setpoint,\n",
     "        }\n",
     "    }\n",
@@ -336,7 +350,7 @@
     "# Plot HVAC power and indoor temperature for baseline and control cases\n",
     "data = {'Baseline': df_baseline,\n",
     "        'Control': df}\n",
-    "plot_info = [('HVAC Cooling Electric Power (kW)', 'Cooling Power', 'r'),\n",
+    "plot_info = [('HVAC Heating Electric Power (kW)', 'Heating Power', 'r'),\n",
     "             ('Temperature - Indoor (C)', 'Indoor Temperature', 'k', False)]\n",
     "fig, (ax1, ax2) = CreateFigures.multi_comparison_plot(data, plot_info)\n",
     "ax1.set_ylabel('Power (kW)')\n",
@@ -350,7 +364,7 @@
    "source": [
     "#### <a name=\"occupancy-control\"></a>Occupancy-based setpoint control\n",
     "\n",
-    "This control will increase the cooling setpoint by 1C if the house is unoccupied.\n",
+    "This control will reduce the heating setpoint by 1C if the house is unoccupied.\n",
     "\n",
     "We use the same house model as above."
    ]
@@ -364,9 +378,9 @@
     "# Create Dwelling model\n",
     "dwelling = Dwelling(name=simulation_name, **dwelling_args)\n",
     "\n",
-    "# Get HVAC cooler and initial setpoint\n",
-    "cooler = dwelling.get_equipment_by_end_use('HVAC Cooling')\n",
-    "setpoint = cooler.schedule.loc[dwelling.start_time, 'HVAC Cooling Setpoint (C)']\n",
+    "# Get HVAC heater and initial setpoint\n",
+    "heater = dwelling.get_equipment_by_end_use('HVAC Heating')\n",
+    "setpoint = heater.schedule.loc[dwelling.start_time, 'HVAC Heating Setpoint (C)']\n",
     "occupied = True\n",
     "\n",
     "# Run OCHRE simulation in for loop\n",
@@ -374,13 +388,13 @@
     "    assert dwelling.current_time == t\n",
     "\n",
     "    # Get HVAC heating setpoint and reduce by 1C if the house is unoccupied\n",
-    "    setpoint = cooler.schedule.loc[t, 'HVAC Cooling Setpoint (C)']  # Original setpoint for current time\n",
+    "    setpoint = heater.schedule.loc[t, 'HVAC Heating Setpoint (C)']  # Original setpoint for current time\n",
     "    if not occupied:\n",
     "        setpoint -= 1\n",
     "\n",
     "    # Set the external control signal\n",
     "    control_signal = {\n",
-    "        'HVAC Cooling': {\n",
+    "        'HVAC Heating': {\n",
     "            'Setpoint': setpoint,\n",
     "        }\n",
     "    }\n",
@@ -397,7 +411,7 @@
     "# Plot HVAC power and indoor temperature for baseline and control cases\n",
     "data = {'Baseline': df_baseline,\n",
     "        'Control': df}\n",
-    "plot_info = [('HVAC Cooling Electric Power (kW)', 'Cooling Power', 'r'),\n",
+    "plot_info = [('HVAC Heating Electric Power (kW)', 'Heating Power', 'r'),\n",
     "             ('Temperature - Indoor (C)', 'Indoor Temperature', 'k', False),\n",
     "             ('Occupancy (Persons)', 'Occupancy', 'b')]\n",
     "fig, (ax1, ax2) = CreateFigures.multi_comparison_plot(data, plot_info)\n",
