added Michael's email and reference to E+ weather

--- a/notebook/user_tutorial.ipynb
+++ b/notebook/user_tutorial.ipynb
@@ -63,9 +63,8 @@
     "[BEopt](https://www.nrel.gov/buildings/beopt.html) (version 3.0+) to create HPXML and occupancy schedule files.\n",
     "OCHRE has sample files [here](https://github.com/NREL/OCHRE/tree/main/defaults/Input%20Files).\n",
     "\n",
-    "Weather files can be downloaded from [NSRDB](https://nsrdb.nrel.gov/),\n",
-    "[BEopt](https://www.nrel.gov/buildings/beopt.html),\n",
-    "or from ResStock's [dataset](https://data.nrel.gov/submissions/156).\n"
+    "Weather files can be downloaded from [EnergyPlus](https://energyplus.net/weather), [NSRDB](https://nsrdb.nrel.gov/),\n",
+    "[BEopt](https://www.nrel.gov/buildings/beopt.html), or from ResStock's [dataset](https://data.nrel.gov/submissions/156).\n"
    ]
   },
   {
