minor fix to notebook

--- a/notebook/user_tutorial.ipynb
+++ b/notebook/user_tutorial.ipynb
@@ -79,21 +79,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'Dwelling' from 'ochre' (unknown location)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\mblonsky\\Github\\OCHRE\\notebook\\user_tutorial.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/mblonsky/Github/OCHRE/notebook/user_tutorial.ipynb#W5sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39msys\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/mblonsky/Github/OCHRE/notebook/user_tutorial.ipynb#W5sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m sys\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mappend(\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m\u001b[39mC:\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mUsers\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mmblonsky\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mGithub\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mOCHRE\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mochre\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/mblonsky/Github/OCHRE/notebook/user_tutorial.ipynb#W5sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mochre\u001b[39;00m \u001b[39mimport\u001b[39;00m Dwelling\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/mblonsky/Github/OCHRE/notebook/user_tutorial.ipynb#W5sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mochre\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m default_input_path  \u001b[39m# for using sample files\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/mblonsky/Github/OCHRE/notebook/user_tutorial.ipynb#W5sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m simulation_name \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mSample House\u001b[39m\u001b[39m'\u001b[39m\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'Dwelling' from 'ochre' (unknown location)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import datetime as dt\n",
@@ -115,7 +103,7 @@
     "    # Input files\n",
     "    'hpxml_file': os.path.join(default_input_path, 'Input Files', 'sample_resstock_properties.xml'),\n",
     "    'schedule_input_file': os.path.join(default_input_path, 'Input Files', 'sample_resstock_schedule.csv'),\n",
-    "    'weather_file': os.path.join(default_input_path, 'Input Files', 'sample_resstock_weather.epw'),\n",
+    "    'weather_file': os.path.join(default_input_path, 'Weather', 'USA_CO_Denver.Intl.AP.725650_TMY3.epw'),\n",
     "\n",
     "    # Output parameters\n",
     "    'verbosity': 4,                         # verbosity of time series files (0-9)\n",
@@ -417,6 +405,13 @@
     "ax1.set_ylabel('Power (kW) and Occupancy (Persons)')\n",
     "ax2.set_ylabel('Temperature (C)')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
