update install notes in notebook

--- a/notebook/user_tutorial.ipynb
+++ b/notebook/user_tutorial.ipynb
@@ -36,13 +36,17 @@
    "source": [
     "#### <a name=\"install\"></a>Installation\n",
     "\n",
-    "OCHRE can be installed using `pip` from the command line:\n",
+    "OCHRE can be installed using `pip` from the command line with:\n",
     "\n",
     "```\n",
-    "pip install git+https://github.com/NREL/OCHRE.get\n",
+    "pip install ochre-nrel\n",
     "```\n",
     "\n",
-    "We currently recommend using the `main` branch.\n",
+    "Alternatively, you can install a specific branch, for example:\n",
+    "\n",
+    "```\n",
+    "pip install git+https://github.com/NREL/OCHRE@dev\n",
+    "```\n",
     "\n",
     "Note that OCHRE requires Python version 3.9 or higher.\n"
    ]
