--- a/notebook/user_tutorial.ipynb
+++ b/notebook/user_tutorial.ipynb
@@ -91,8 +91,6 @@
     "import datetime as dt\n",
     "import pandas as pd\n",
     "\n",
-    "import sys\n",
-    "sys.path.append(r'C:\\Users\\mblonsky\\Github\\OCHRE\\ochre')\n",
     "from ochre import Dwelling\n",
     "from ochre.utils import default_input_path  # for using sample files\n",
     "\n",
@@ -242,8 +240,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CreateFigures.plot_daily_profile(df, 'Water Heating Electric Power (kW)', plot_max=False, plot_min=False)\n",
-    "CreateFigures.plot_time_series_detailed((df['Hot Water Outlet Temperature (C)'],))\n"
+    "fig = CreateFigures.plot_daily_profile(df, 'Water Heating Electric Power (kW)', plot_max=False, plot_min=False)\n",
+    "# fig, _ = CreateFigures.plot_time_series_detailed((df['Hot Water Outlet Temperature (C)'],))\n",
+    "fig"
    ]
   },
   {
@@ -299,7 +298,8 @@
     "             ('Temperature - Indoor (C)', 'Indoor Temperature', 'k', False)]\n",
     "fig, (ax1, ax2) = CreateFigures.multi_comparison_plot(data, plot_info)\n",
     "ax1.set_ylabel('Power (kW)')\n",
-    "ax2.set_ylabel('Temperature (C)')\n"
+    "ax2.set_ylabel('Temperature (C)')\n",
+    "fig\n"
    ]
   },
   {
@@ -345,7 +345,8 @@
     "             ('Temperature - Indoor (C)', 'Indoor Temperature', 'k', False)]\n",
     "fig, (ax1, ax2) = CreateFigures.multi_comparison_plot(data, plot_info)\n",
     "ax1.set_ylabel('Power (kW)')\n",
-    "ax2.set_ylabel('Temperature (C)')\n"
+    "ax2.set_ylabel('Temperature (C)')\n",
+    "fig\n"
    ]
   },
   {
@@ -407,7 +408,9 @@
     "             ('Occupancy (Persons)', 'Occupancy', 'b')]\n",
     "fig, (ax1, ax2) = CreateFigures.multi_comparison_plot(data, plot_info)\n",
     "ax1.set_ylabel('Power (kW) and Occupancy (Persons)')\n",
-    "ax2.set_ylabel('Temperature (C)')\n"
+    "ax2.set_ylabel('Temperature (C)')\n",
+    "\n",
+    "fig\n"
    ]
   },
   {
@@ -434,7 +437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4,
   "vscode": {
