--- a/notebook/user_tutorial.ipynb
+++ b/notebook/user_tutorial.ipynb
@@ -94,35 +94,39 @@
     "from ochre import Dwelling\n",
     "from ochre.utils import default_input_path  # for using sample files\n",
     "\n",
-    "simulation_name = 'Sample House'\n",
+    "simulation_name = \"Sample House\"\n",
     "\n",
     "dwelling_args = {\n",
     "    # Timing parameters\n",
-    "    'start_time': dt.datetime(2018, 1, 1, 0, 0),  # year, month, day, hour, minute\n",
-    "    'time_res': dt.timedelta(minutes=10),         # time resolution of the simulation\n",
-    "    'duration': dt.timedelta(days=3),             # duration of the simulation\n",
-    "\n",
+    "    \"start_time\": dt.datetime(2018, 1, 1, 0, 0),  # year, month, day, hour, minute\n",
+    "    \"time_res\": dt.timedelta(minutes=10),  # time resolution of the simulation\n",
+    "    \"duration\": dt.timedelta(days=3),  # duration of the simulation\n",
+    "    \n",
     "    # Input files\n",
-    "    'hpxml_file': os.path.join(default_input_path, 'Input Files', 'sample_resstock_properties.xml'),\n",
-    "    'schedule_input_file': os.path.join(default_input_path, 'Input Files', 'sample_resstock_schedule.csv'),\n",
-    "    'weather_file': os.path.join(default_input_path, 'Weather', 'USA_CO_Denver.Intl.AP.725650_TMY3.epw'),\n",
+    "    \"hpxml_file\": os.path.join(default_input_path, \"Input Files\", \"bldg0112631-up11.xml\"),\n",
+    "    \"schedule_input_file\": os.path.join(\n",
+    "        default_input_path, \"Input Files\", \"bldg0112631_schedule.csv\"\n",
+    "    ),\n",
+    "    \"weather_file\": os.path.join(\n",
+    "        default_input_path, \"Weather\", \"USA_CO_Denver.Intl.AP.725650_TMY3.epw\"\n",
+    "    ),\n",
     "\n",
     "    # Output parameters\n",
-    "    'verbosity': 4,                         # verbosity of time series files (0-9)\n",
-    "    'output_path': os.getcwd(),             # defaults to properties_file path\n",
-    "\n",
+    "    \"verbosity\": 4,  # verbosity of time series files (0-9)\n",
+    "    \"output_path\": os.getcwd(),  # defaults to properties_file path\n",
+    "    \n",
     "    # Equipment parameters (see bin/run_dwelling.py for more options)\n",
     "    # 'Equipment': {\n",
     "    #     'PV': {\n",
     "    #         'capacity': 5,   # in kW\n",
     "    #         'tilt': 20,      # in degrees\n",
-    "    #         'azimuth': 180,  # in degrees\n",
+    "    #         'azimuth': 0,    # in degrees, south=0\n",
     "    #     }\n",
     "    # },\n",
     "}\n",
     "\n",
     "# Create Dwelling model\n",
-    "dwelling = Dwelling(name=simulation_name, **dwelling_args)\n"
+    "dwelling = Dwelling(name=simulation_name, **dwelling_args)"
    ]
   },
   {
@@ -423,7 +427,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ochre_dev",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -437,14 +441,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.4"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "38511c319a6abad618a0f5b1e1754d185267d9d16f724d65987013cf31e529bb"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
