renamed schedule_input_file to hpxml_schedule_file

--- a/notebook/user_tutorial.ipynb
+++ b/notebook/user_tutorial.ipynb
@@ -115,7 +115,7 @@
     "\n",
     "    # Input files\n",
     "    \"hpxml_file\": os.path.join(default_input_path, \"Input Files\", \"bldg0112631-up11.xml\"),\n",
-    "    \"schedule_input_file\": os.path.join(\n",
+    "    \"hpxml_schedule_file\": os.path.join(\n",
     "        default_input_path, \"Input Files\", \"bldg0112631_schedule.csv\"\n",
     "    ),\n",
     "    \"weather_file\": os.path.join(\n",
@@ -762,7 +762,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv_test",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
