replacing EV mileage with range

--- a/notebook/user_tutorial.ipynb
+++ b/notebook/user_tutorial.ipynb
@@ -235,7 +235,7 @@
     "    # Equipment parameters\n",
     "    \"vehicle_type\": \"BEV\",\n",
     "    \"charging_level\": \"Level 1\",\n",
-    "    \"mileage\": 200,\n",
+    "    \"range\": 200,\n",
     "    # Option to specify a file with EV charging events\n",
     "    # \"equipment_event_file\": os.path.join(default_input_path, \"EV\", \"PHEV_level_1.csv\"),\n",
     "    **default_args,\n",
@@ -382,13 +382,13 @@
    "outputs": [],
    "source": [
     "def setup_ev(i) -> ElectricVehicle:\n",
-    "    # randomly select vehicle type, mileage, and charging level\n",
+    "    # randomly select vehicle type, range, and charging level\n",
     "    vehicle_type = np.random.choice([\"BEV\", \"PHEV\"])\n",
     "    charging_level = np.random.choice([\"Level 1\", \"Level 2\"])\n",
     "    if vehicle_type == \"BEV\":\n",
-    "        mileage = round(np.random.uniform(100, 300))\n",
+    "        range = round(np.random.uniform(100, 300))\n",
     "    else:\n",
-    "        mileage = round(np.random.uniform(20, 70))\n",
+    "        range = round(np.random.uniform(20, 70))\n",
     "\n",
     "    # Option to specify a file with EV charging events\n",
     "    # Defaults to older charging event data\n",
@@ -402,7 +402,7 @@
     "        seed=i,  # used to randomize charging events. Not used for randomization above\n",
     "        vehicle_type=vehicle_type,\n",
     "        charging_level=charging_level,\n",
-    "        mileage=mileage,\n",
+    "        range=range,\n",
     "        start_time=dt.datetime(2018, 1, 1, 0, 0),  # year, month, day, hour, minute\n",
     "        time_res=dt.timedelta(minutes=15),\n",
     "        duration=dt.timedelta(days=5),\n",
@@ -602,7 +602,7 @@
     "    # Equipment parameters\n",
     "    \"vehicle_type\": \"BEV\",\n",
     "    \"charging_level\": \"Level 1\",\n",
-    "    \"mileage\": 150,\n",
+    "    \"range\": 150,\n",
     "}\n",
     "\n",
     "# Initialize\n",
