--- a/notebook/user_tutorial.ipynb
+++ b/notebook/user_tutorial.ipynb
@@ -7,27 +7,45 @@
    "source": [
     "# OCHRE User Tutorial\n",
     "\n",
-    "* [Set up](#setup)\n",
-    "  * [Installation](#install)\n",
-    "  * [Getting input files](#inputs)\n",
-    "* [Running a basic house](#dwelling)\n",
-    "* [Running a single piece of equipment](#equipment)\n",
-    "  * [Electric Vehicle](#ev)\n",
-    "  * [Water Heater](#water_heater)\n",
-    "* [Running a fleet](#fleet)\n",
-    "  * [EV Fleet](#ev-fleet)\n",
-    "  * [Multiple houses](#house-fleet)\n",
-    "* [Running with external controllers](#control)\n",
-    "  * [HVAC setpoint control](#hvac-control)\n",
-    "  * [EV managed charging](#ev-control)\n",
-    "  * [HPWH CTA-2045 control](#wh-control)\n",
-    "* [Links to other examples](#links)\n",
+    "OCHRE&trade; is a Python-based energy modeling tool designed to model flexible\n",
+    "end-use loads and distributed energy resources in residential buildings. OCHRE\n",
+    "includes detailed models for flexible devices including HVAC equipment, water\n",
+    "heaters, electric vehicles, solar PV, and batteries. It can examine the\n",
+    "impacts of novel control strategies on energy consumption and occupant comfort\n",
+    "metrics. OCHRE integrates with many of NREL's established modeling tools,\n",
+    "including [ResStock&trade;](https://resstock.nrel.gov/),\n",
+    "[BEopt&trade;](https://www.nrel.gov/buildings/beopt.html),\n",
+    "[EVI-Pro](https://www.nrel.gov/transportation/evi-pro.html),\n",
+    "[SAM](https://sam.nrel.gov/), and [HELICS](https://helics.org).\n",
     "\n",
     "This tutorial covers the basics of how to install and run OCHRE, and provides\n",
     "some examples for various use cases. It can be downloaded online\n",
     "[here](https://github.com/NREL/OCHRE/blob/main/notebook/user_tutorial.ipynb).\n",
     "\n",
-    "The full documentation for OCHRE can be found [here](https://ochre-nrel.readthedocs.io/)\n"
+    "More information about OCHRE can be found in [our\n",
+    "documentation](https://ochre-nrel.readthedocs.io/), on [NREL's\n",
+    "website](https://www.nrel.gov/grid/ochre.html), and from the [Powered By\n",
+    "OCHRE](https://www.youtube.com/watch?v=B5elLVtYDbI) webinar recording.\n",
+    "\n",
+    "If you use OCHRE for your research or other projects, please fill out our\n",
+    "[user survey](https://forms.office.com/g/U4xYhaWEvs).\n",
+    "\n",
+    "* [Set up](#setup)\n",
+    "  * [Running online](#online)\n",
+    "  * [Local installation](#install)\n",
+    "  * [Getting input files](#inputs)\n",
+    "* [Simulating a dwelling](#dwelling)\n",
+    "* [Simulating a single piece of equipment](#equipment)\n",
+    "  * [Electric vehicle](#ev)\n",
+    "  * [Water heater](#water_heater)\n",
+    "* [Simulating a fleet](#fleet)\n",
+    "  * [EV fleet](#ev-fleet)\n",
+    "  * [Multiple houses](#house-fleet)\n",
+    "* [Simulating with external controllers](#control)\n",
+    "  * [HVAC setpoint control](#hvac-control)\n",
+    "  * [EV managed charging](#ev-control)\n",
+    "  * [HPWH CTA-2045 control](#wh-control)\n",
+    "* [Links to other examples](#links)\n"
    ]
   },
   {
@@ -38,11 +56,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <a name=\"online\"></a>Running online\n",
+    "\n",
+    "OCHRE can be run through an interactive Jupyter notebook. You may need to run\n",
+    "the code below and restart the notebook to install OCHRE.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install ochre-nrel"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <a name=\"install\"></a>Installation\n",
+    "### <a name=\"install\"></a>Local installation\n",
     "\n",
     "OCHRE can be installed using `pip` from the command line with:\n",
     "\n",
@@ -56,7 +93,7 @@
     "pip install git+https://github.com/NREL/OCHRE@dev\n",
     "```\n",
     "\n",
-    "Note that OCHRE requires Python version >=3.9 and <3.12."
+    "Note that OCHRE currently requires Python version >=3.9 and <3.12."
    ]
   },
   {
@@ -66,20 +103,18 @@
    "source": [
     "### <a name=\"inputs\"></a>Getting input files\n",
     "\n",
-    "OCHRE Dwelling models often require 3 inputs files:\n",
-    "* An HPXML file with building properties (.xml)\n",
-    "* An occupancy schedule file (.csv)\n",
+    "OCHRE `Dwelling` models typically require 3 inputs files:\n",
+    "* An HPXML file with building and equipment properties (.xml)\n",
+    "* An HPXML schedule file with occupant usage profiles (.csv)\n",
     "* A weather file (.epw, or .csv with NSRDB format)\n",
     "\n",
-    "We recommend using [ResStock](https://www.nrel.gov/buildings/resstock.html) (version 3.0+) or\n",
-    "[BEopt](https://www.nrel.gov/buildings/beopt.html) (version 3.0+) to create HPXML and occupancy schedule files.\n",
-    "OCHRE includes some [sample files](https://github.com/NREL/OCHRE/tree/main/ochre/defaults/Input%20Files)\n",
-    "and some code to [download ResStock files](https://github.com/NREL/OCHRE/tree/main/bin/run_multiple.py#L72).\n",
-    "\n",
-    "Weather files can be downloaded from [EnergyPlus](https://energyplus.net/weather), [NSRDB](https://nsrdb.nrel.gov/),\n",
-    "[BEopt](https://www.nrel.gov/buildings/beopt.html), or from ResStock's [dataset](https://data.nrel.gov/submissions/156).\n",
-    "\n",
-    "See the official documentation for more information on [Generating Input Files](https://ochre-nrel.readthedocs.io/en/latest/InputsAndArguments.html#generating-input-files)."
+    "There are [multiple\n",
+    "ways](https://ochre-nrel.readthedocs.io/en/latest/InputsAndArguments.html#generating-input-files)\n",
+    "to generate or download OCHRE input files. This tutorial will use [sample\n",
+    "files](https://github.com/NREL/OCHRE/tree/main/ochre/defaults/Input%20Files)\n",
+    "from the ResStock 2024.2 dataset and from\n",
+    "[EnergyPlus](https://energyplus.net/weather), which are both [publicly\n",
+    "available](https://resstock.nrel.gov/datasets).\n"
    ]
   },
   {
@@ -87,9 +122,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a name=\"dwelling\"></a>Running a basic house\n",
+    "## <a name=\"dwelling\"></a>Simulating a dwelling\n",
     "\n",
-    "For more details, see [bin/run_dwelling.py](https://github.com/NREL/OCHRE/tree/main/bin/run_dwelling.py)"
+    "OCHRE is most commonly used to model an entire residential dwelling, or house,\n",
+    "with many pieces of energy-consuming equipment. In addition to specifying\n",
+    "input files, OCHRE requires a simulation start time, time resolution, and\n",
+    "duration.\n",
+    "\n",
+    "Many [additional\n",
+    "inputs](https://ochre-nrel.readthedocs.io/en/latest/InputsAndArguments.html#dwelling-arguments)\n",
+    "can be specified. For an example with more details, see\n",
+    "[bin/run_dwelling.py](https://github.com/NREL/OCHRE/tree/main/bin/run_dwelling.py).\n",
+    "There are also [command line and graphical user\n",
+    "interfaces](https://ochre-nrel.readthedocs.io/en/latest/Introduction.html#command-line-interface)\n",
+    "for simpler use cases.\n",
+    "\n",
+    "The following code will initialize a Dwelling:\n"
    ]
   },
   {
@@ -100,44 +148,36 @@
    "source": [
     "import os\n",
     "import datetime as dt\n",
-    "import pandas as pd\n",
     "\n",
     "from ochre import Dwelling\n",
     "from ochre.utils import default_input_path  # for using sample files\n",
     "\n",
     "dwelling_args = {\n",
-    "    \"name\": \"MyHouse\",  # simulation name\n",
-    "    \n",
     "    # Timing parameters\n",
-    "    \"start_time\": dt.datetime(2018, 1, 1, 0, 0),  # year, month, day, hour, minute\n",
+    "    \"start_time\": dt.datetime(2018, 1, 1, 0, 0),  # (year, month, day, hour, minute)\n",
     "    \"time_res\": dt.timedelta(minutes=10),         # time resolution of the simulation\n",
     "    \"duration\": dt.timedelta(days=1),             # duration of the simulation\n",
     "\n",
     "    # Input files\n",
     "    \"hpxml_file\": os.path.join(default_input_path, \"Input Files\", \"bldg0112631-up11.xml\"),\n",
-    "    \"hpxml_schedule_file\": os.path.join(\n",
-    "        default_input_path, \"Input Files\", \"bldg0112631_schedule.csv\"\n",
-    "    ),\n",
-    "    \"weather_file\": os.path.join(\n",
-    "        default_input_path, \"Weather\", \"USA_CO_Denver.Intl.AP.725650_TMY3.epw\"\n",
-    "    ),\n",
-    "    \n",
-    "    # Output parameters\n",
-    "    \"verbosity\": 4,              # verbosity of time series files (0-9)\n",
-    "    \"output_path\": os.getcwd(),  # defaults to properties_file path\n",
-    "    \n",
-    "    # Equipment parameters (see bin/run_dwelling.py for more options)\n",
-    "    # \"Equipment\": {\n",
-    "    #     \"PV\": {\n",
-    "    #         \"capacity\": 5,   # in kW\n",
-    "    #         \"tilt\": 20,      # in degrees\n",
-    "    #         \"azimuth\": 0,    # in degrees, south=0\n",
-    "    #     }\n",
-    "    # },\n",
+    "    \"hpxml_schedule_file\": os.path.join(default_input_path, \"Input Files\", \"bldg0112631_schedule.csv\"),\n",
+    "    \"weather_file\": os.path.join(default_input_path, \"Weather\", \"USA_CO_Denver.Intl.AP.725650_TMY3.epw\"),\n",
     "}\n",
     "\n",
     "# Create Dwelling model\n",
     "dwelling = Dwelling(**dwelling_args)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following code will simulate the dwelling. By default, it will return the\n",
+    "following results and save them to files:\n",
+    "\n",
+    "- `df`: a Pandas DataFrame of time series results\n",
+    "- `metrics`: a dictionary of energy metrics\n",
+    "- `hourly`: a Pandas DataFrame of time series results with 1 hour resolution"
    ]
   },
   {
@@ -146,15 +186,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from ochre import Analysis\n",
-    "\n",
-    "# Run OCHRE simulation (returns DataFrames of timeseries results and a dictionary of metrics)\n",
-    "df, metrics, hourly = dwelling.simulate()\n",
-    "\n",
-    "# Load results from previous run\n",
-    "# df, metrics, hourly = Analysis.load_ochre(dwelling_args[\"output_path\"], dwelling_args[\"name\"])\n",
-    "\n",
+    "df, metrics, hourly = dwelling.simulate()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The time series results include the total house power, including electricity\n",
+    "real and reactive power and natural gas consumption. Many [additional\n",
+    "results](https://ochre-nrel.readthedocs.io/en/latest/Outputs.html) can be\n",
+    "saved by increasing the `verbosity` of the simulation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdf\u001b[49m\u001b[38;5;241m.\u001b[39mhead()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Metrics include the total house electricity and natural gas energy consumed. Many [additional\n",
+    "metrics](https://ochre-nrel.readthedocs.io/en/latest/Outputs.html#all-metrics) can be\n",
+    "saved by increasing the `metrics_verbosity` of the simulation.\n"
    ]
   },
   {
@@ -164,6 +236,42 @@
    "outputs": [],
    "source": [
     "metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `Analysis` module has useful data analysis functions for OCHRE output\n",
+    "data. The following code will reload the results and recalculate the metrics\n",
+    "from the previous run:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from ochre import Analysis\n",
+    "\n",
+    "# Load results from previous run\n",
+    "sim_path = os.getcwd()\n",
+    "sim_name = \"ochre\"\n",
+    "df, metrics, hourly = Analysis.load_ochre(sim_path, sim_name)\n",
+    "\n",
+    "# calculate metrics from the time series results\n",
+    "metrics2 = Analysis.calculate_metrics(df)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `CreateFigures` module has useful visualization functions for OCHRE output\n",
+    "data. The following code will create a stacked plot of house power by end use:\n",
+    "\n"
    ]
   },
   {
@@ -181,6 +289,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following code will plot the average daily load profile:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -194,7 +309,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a name=\"equipment\"></a>Running a single equipment model\n",
+    "## <a name=\"equipment\"></a>Simulating a single piece of equipment\n",
     "\n",
     "For more details and examples, see\n",
     "[bin/run_equipment.py](https://github.com/NREL/OCHRE/blob/main/bin/run_equipment.py)"
@@ -220,7 +335,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <a name=\"ev\"></a>Running an electric vehicle\n"
+    "### <a name=\"ev\"></a>Simulating an electric vehicle\n"
    ]
   },
   {
@@ -279,7 +394,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <a name=\"water_heater\"></a>Running a water heater\n"
+    "### <a name=\"water_heater\"></a>Simulating a water heater\n"
    ]
   },
   {
@@ -289,6 +404,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
     "from ochre import ElectricResistanceWaterHeater\n",
     "\n",
     "# Create water draw schedule\n",
@@ -362,14 +478,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a name=\"fleet\"></a>Running a fleet\n"
+    "## <a name=\"fleet\"></a>Simulating a fleet\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <a name=\"ev-fleet\"></a>Running an EV fleet\n",
+    "### <a name=\"ev-fleet\"></a>Simulating an EV fleet\n",
     "\n",
     "For more details and examples, see\n",
     "[bin/run_fleet.py](https://github.com/NREL/OCHRE/blob/main/bin/run_fleet.py)"
@@ -453,7 +569,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <a name=\"house-fleet\"></a>Running multiple houses\n",
+    "### <a name=\"house-fleet\"></a>Simulating multiple houses\n",
     "\n",
     "For more details and examples, see\n",
     "[bin/run_multiple.py](https://github.com/NREL/OCHRE/blob/main/bin/run_multiple.py)"
@@ -507,7 +623,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a name=\"control\"></a>Running with external controllers\n",
+    "## <a name=\"control\"></a>Simulating with external controllers\n",
     "\n",
     "For more details and examples, see\n",
     "[bin/run_external_control.py](https://github.com/NREL/OCHRE/blob/main/bin/run_external_control.py)"
