--- a/notebook/user_tutorial.ipynb
+++ b/notebook/user_tutorial.ipynb
@@ -311,31 +311,28 @@
    "source": [
     "## <a name=\"equipment\"></a>Simulating a single piece of equipment\n",
     "\n",
-    "For more details and examples, see\n",
+    "OCHRE can simulate a single piece of equipment, including an electric vehicle,\n",
+    "water heater, solar PV system, or battery. Compared to simulating a full\n",
+    "dwelling, fewer input files and arguments are required. However, most\n",
+    "equipment require some [input\n",
+    "arguments](https://ochre-nrel.readthedocs.io/en/latest/InputsAndArguments.html#equipment-specific-arguments)\n",
+    "that often need to be specified manually.\n",
+    "\n",
+    "This tutorial shows examples to simulate an EV and a water heater. For more\n",
+    "details and examples, see\n",
     "[bin/run_equipment.py](https://github.com/NREL/OCHRE/blob/main/bin/run_equipment.py)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "default_args = {\n",
-    "    \"start_time\": dt.datetime(2018, 1, 1, 0, 0),  # year, month, day, hour, minute\n",
-    "    \"time_res\": dt.timedelta(minutes=15),\n",
-    "    \"duration\": dt.timedelta(days=10),\n",
-    "    \"verbosity\": 3,\n",
-    "    \"save_results\": False,  # if True, must specify output_path\n",
-    "    # \"output_path\": os.getcwd(),\n",
-    "}\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <a name=\"ev\"></a>Simulating an electric vehicle\n"
+    "### <a name=\"ev\"></a>Simulating an electric vehicle\n",
+    "\n",
+    "The following code will initialize and then simulate an [electric\n",
+    "vehicle](https://ochre-nrel.readthedocs.io/en/latest/ModelingApproach.html#electric-vehicles).\n",
+    "The vehicle type (i.e., drive train), charging level, and range must be\n",
+    "specified."
    ]
   },
   {
@@ -347,13 +344,17 @@
     "from ochre import ElectricVehicle\n",
     "\n",
     "equipment_args = {\n",
-    "    # Equipment parameters\n",
+    "    \"start_time\": dt.datetime(2018, 1, 1, 0, 0),  # year, month, day, hour, minute\n",
+    "    \"time_res\": dt.timedelta(minutes=15),\n",
+    "    \"duration\": dt.timedelta(days=10),\n",
+    "    \"verbosity\": 3,\n",
+    "    \"save_results\": False,  # if True, must specify output_path\n",
+    "    # \"output_path\": os.getcwd(),\n",
+    "\n",
+    "    # Equipment-specific parameters\n",
     "    \"vehicle_type\": \"BEV\",\n",
     "    \"charging_level\": \"Level 1\",\n",
     "    \"range\": 200,\n",
-    "    # Option to specify a file with EV charging events\n",
-    "    # \"equipment_event_file\": os.path.join(default_input_path, \"EV\", \"PHEV_level_1.csv\"),\n",
-    "    **default_args,\n",
     "}\n",
     "\n",
     "# Initialize equipment\n",
@@ -394,7 +395,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <a name=\"water_heater\"></a>Simulating a water heater\n"
+    "### <a name=\"water_heater\"></a>Simulating a water heater\n",
+    "\n",
+    "The following code will initialize and then simulate a [water\n",
+    "heater](https://ochre-nrel.readthedocs.io/en/latest/ModelingApproach.html#water-heating).\n",
+    "Multiple inputs are required, including the setpoint temperature, tank size,\n",
+    "and heat transfer coefficient. A time series schedule is required that\n",
+    "includes a water draw profile, the air temperature surrounding the water\n",
+    "heater (\"Zone Temperature\"), and the water mains temperature. "
    ]
   },
   {
@@ -408,10 +416,12 @@
     "from ochre import ElectricResistanceWaterHeater\n",
     "\n",
     "# Create water draw schedule\n",
+    "start_time = dt.datetime(2018, 1, 1, 0, 0)  # year, month, day, hour, minute\n",
     "time_res = dt.timedelta(minutes=1)\n",
+    "duration = dt.timedelta(days=10)\n",
     "times = pd.date_range(\n",
-    "    default_args[\"start_time\"],\n",
-    "    default_args[\"start_time\"] + default_args[\"duration\"],\n",
+    "    start_time,\n",
+    "    start_time + duration,\n",
     "    freq=time_res,\n",
     "    inclusive=\"left\",\n",
     ")\n",
@@ -427,14 +437,18 @@
     ")\n",
     "\n",
     "equipment_args = {\n",
-    "    # Equipment parameters\n",
+    "    \"start_time\": start_time,  # year, month, day, hour, minute\n",
+    "    \"time_res\": time_res,\n",
+    "    \"duration\": duration,\n",
+    "    \"verbosity\": 3,\n",
+    "    \"save_results\": False,  # if True, must specify output_path\n",
+    "    # \"output_path\": os.getcwd(),\n",
+    "    # Equipment-specific parameters\n",
     "    \"Setpoint Temperature (C)\": 51,\n",
     "    \"Tank Volume (L)\": 250,\n",
     "    \"Tank Height (m)\": 1.22,\n",
     "    \"UA (W/K)\": 2.17,\n",
     "    \"schedule\": schedule,\n",
-    "    **default_args,\n",
-    "    \"time_res\": time_res,\n",
     "}\n",
     "\n",
     "# Initialize equipment\n",
@@ -478,7 +492,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a name=\"fleet\"></a>Simulating a fleet\n"
+    "## <a name=\"fleet\"></a>Simulating a fleet\n",
+    "\n",
+    "OCHRE can simulate multiple homes or pieces of equipment at once to model\n",
+    "a aggregation or a fleet of devices. The following examples show how to model\n",
+    "a fleet of EVs or a set of homes sequentially. See the [following\n",
+    "section](#control) for methods to run multiple simulations in parallel.\n",
+    "\n",
+    "For more details and examples, see\n",
+    "[bin/run_fleet.py](https://github.com/NREL/OCHRE/blob/main/bin/run_fleet.py)\n",
+    "and\n",
+    "[bin/run_multiple.py](https://github.com/NREL/OCHRE/blob/main/bin/run_multiple.py)"
    ]
   },
   {
@@ -487,8 +511,8 @@
    "source": [
     "### <a name=\"ev-fleet\"></a>Simulating an EV fleet\n",
     "\n",
-    "For more details and examples, see\n",
-    "[bin/run_fleet.py](https://github.com/NREL/OCHRE/blob/main/bin/run_fleet.py)"
+    "The following code will set up a fleet of EV models, run each one\n",
+    "sequentially, and then plot the power of each EV."
    ]
   },
   {
@@ -571,8 +595,8 @@
    "source": [
     "### <a name=\"house-fleet\"></a>Simulating multiple houses\n",
     "\n",
-    "For more details and examples, see\n",
-    "[bin/run_multiple.py](https://github.com/NREL/OCHRE/blob/main/bin/run_multiple.py)"
+    "The following code will download two building models from the ResStock 2024.2\n",
+    "dataset and sequentially initialize and simulate them. "
    ]
   },
   {
@@ -625,8 +649,16 @@
    "source": [
     "## <a name=\"control\"></a>Simulating with external controllers\n",
     "\n",
+    "OCHRE is designed to integrate with external controllers and other modeling\n",
+    "tools. External controllers can adjust the power consumption of any OCHRE\n",
+    "equipment using multiple [control\n",
+    "methods](https://ochre-nrel.readthedocs.io/en/latest/ControllerIntegration.html).\n",
+    "The following examples show device-level control methods for HVAC systems,\n",
+    "EVs, and water heaters.\n",
+    "\n",
     "For more details and examples, see\n",
-    "[bin/run_external_control.py](https://github.com/NREL/OCHRE/blob/main/bin/run_external_control.py)"
+    "[bin/run_external_control.py](https://github.com/NREL/OCHRE/blob/main/bin/run_external_control.py).\n",
+    "There is also example code to run OCHRE [in co-simulation using HELICS](https://github.com/NREL/OCHRE/blob/main/bin/run_cosimulation.py)"
    ]
   },
   {
@@ -636,9 +668,10 @@
    "source": [
     "### <a name=\"hvac-control\"></a>HVAC setpoint control\n",
     "\n",
-    "This control will reduce the heating setpoint by 1C from 5-9PM each day.\n",
-    "\n",
-    "We use the same house model as above."
+    "This control will reduce the heating setpoint by 1C from 5-9PM each day. It\n",
+    "adjusts the setpoint schedule before beginning the simulation; however, this\n",
+    "control can be achieved by setting the setpoint at every time step as well. We\n",
+    "use the same house model as the first example."
    ]
   },
   {
@@ -647,7 +680,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize\n",
+    "# Update the simulation args to run at a finer time resolution\n",
     "dwelling_args.update(\n",
     "    {\n",
     "        \"time_res\": dt.timedelta(minutes=1),  # time resolution of the simulation\n",
@@ -655,6 +688,8 @@
     "        \"verbosity\": 6,  # verbosity of time series files (0-9)\n",
     "    }\n",
     ")\n",
+    "\n",
+    "# Initialize the Dwelling\n",
     "dwelling = Dwelling(**dwelling_args)\n",
     "\n",
     "# Get HVAC heater schedule\n",
@@ -693,11 +728,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <a name=\"ev-control\"></a>EV managed charging\n"
+    "### <a name=\"ev-control\"></a>EV managed charging\n",
+    "\n",
+    "This control implements \"perfect\" managed charging for an EV. At each time\n",
+    "step, it calculates the average power required to achieve 100% SOC by the end\n",
+    "of the parking session, and sets the charging power to that value."
    ]
   },
   {
@@ -759,7 +805,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <a name=\"wh-control\"></a>HPWH CTA-2045 control\n"
+    "### <a name=\"wh-control\"></a>HPWH CTA-2045 control\n",
+    "\n",
+    "This control implements the CTA-2045 Load Add and Load Shed control for a heat\n",
+    "pump water heater. The control will adjust the setpoint and deadband of the\n",
+    "water heater thermostat to increase load for 1 hour (at 7AM and 4PM) and then\n",
+    "reduce load for 1 hour (at 8AM and 5PM)."
    ]
   },
   {
@@ -851,23 +902,6 @@
     "    \"Hot Water Delivered (L/min)\",\n",
     "]\n",
     "df.loc[:, cols_to_plot].plot()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## <a name=\"links\"></a>Links to other examples\n",
-    "\n",
-    "For more examples, see Python example scripts to:\n",
-    "  * Run a [single dwelling](https://github.com/NREL/OCHRE/blob/main/bin/run_dwelling.py)\n",
-    "  * Run a [single piece of equipment](https://github.com/NREL/OCHRE/blob/main/bin/run_equipment.py)\n",
-    "  * Run a [fleet of equipment](https://github.com/NREL/OCHRE/blob/main/bin/run_fleet.py)\n",
-    "  * Run [multiple dwellings](https://github.com/NREL/OCHRE/blob/main/bin/run_multiple.py)\n",
-    "  * Run a [OCHRE with an external controller](https://github.com/NREL/OCHRE/blob/main/bin/run_external_control.py)\n",
-    "  * Run a [OCHRE in co-simulation using HELICS](https://github.com/NREL/OCHRE/blob/main/bin/run_cosimulation.py)\n",
-    "\n",
-    "More information about usage can be found in the [OCHRE documentation](https://ochre-nrel.readthedocs.io/en/latest/)\n"
    ]
   },
   {
