--- a/notebook/user_tutorial.ipynb
+++ b/notebook/user_tutorial.ipynb
@@ -658,7 +658,9 @@
     "\n",
     "For more details and examples, see\n",
     "[bin/run_external_control.py](https://github.com/NREL/OCHRE/blob/main/bin/run_external_control.py).\n",
-    "There is also example code to run OCHRE [in co-simulation using HELICS](https://github.com/NREL/OCHRE/blob/main/bin/run_cosimulation.py)"
+    "There is also example code to run OCHRE in\n",
+    "[co-simulation](https://github.com/NREL/OCHRE/blob/main/bin/run_cosimulation.py)\n",
+    "using HELICS."
    ]
   },
   {
