intro paragraph updates

--- a/notebook/user_tutorial.ipynb
+++ b/notebook/user_tutorial.ipynb
@@ -7,16 +7,14 @@
    "source": [
     "# OCHRE User Tutorial\n",
     "\n",
-    "OCHRE&trade; is a Python-based energy modeling tool designed to model flexible\n",
-    "end-use loads and distributed energy resources in residential buildings. OCHRE\n",
-    "includes detailed models for flexible devices including HVAC equipment, water\n",
-    "heaters, electric vehicles, solar PV, and batteries. It can examine the\n",
-    "impacts of novel control strategies on energy consumption and occupant comfort\n",
-    "metrics. OCHRE integrates with many of NREL's established modeling tools,\n",
-    "including [ResStock&trade;](https://resstock.nrel.gov/),\n",
-    "[BEopt&trade;](https://www.nrel.gov/buildings/beopt.html),\n",
-    "[EVI-Pro](https://www.nrel.gov/transportation/evi-pro.html),\n",
-    "[SAM](https://sam.nrel.gov/), and [HELICS](https://helics.org).\n",
+    "OCHRE&trade; is a Python-based energy modeling tool designed to model end-use\n",
+    "loads and distributed energy resources in residential buildings. It can model\n",
+    "flexible devices---including HVAC equipment, water heaters, electric vehicles,\n",
+    "solar PV, and batteries---and the thermal and electrical interactions between\n",
+    "them. OCHRE has been used to generate diverse and high-resolution load\n",
+    "profiles, examine the impacts of advanced control strategies on energy costs\n",
+    "and occupant comfort, and assess grid reliability and resilience through\n",
+    "building-to-grid co-simulation.\n",
     "\n",
     "This tutorial covers the basics of how to install and run OCHRE, and provides\n",
     "some examples for various use cases. It can be downloaded online\n",
@@ -114,7 +112,8 @@
     "files](https://github.com/NREL/OCHRE/tree/main/ochre/defaults/Input%20Files)\n",
     "from the ResStock 2024.2 dataset and from\n",
     "[EnergyPlus](https://energyplus.net/weather), which are both [publicly\n",
-    "available](https://resstock.nrel.gov/datasets).\n"
+    "available](https://resstock.nrel.gov/datasets). An example below shows how to\n",
+    "[download building models](#house-fleet) from the ResStock dataset.\n"
    ]
   },
   {
@@ -201,21 +200,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdf\u001b[49m\u001b[38;5;241m.\u001b[39mhead()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.head()"
    ]
