--- a/notebook/user_tutorial.ipynb
+++ b/notebook/user_tutorial.ipynb
@@ -42,8 +42,7 @@
     "* [Simulating with external controllers](#control)\n",
     "  * [HVAC setpoint control](#hvac-control)\n",
     "  * [EV managed charging](#ev-control)\n",
-    "  * [HPWH CTA-2045 control](#wh-control)\n",
-    "* [Links to other examples](#links)\n"
+    "  * [HPWH CTA-2045 control](#wh-control)\n"
    ]
   },
   {
@@ -160,7 +159,7 @@
     "    # Input files\n",
     "    \"hpxml_file\": os.path.join(default_input_path, \"Input Files\", \"bldg0112631-up11.xml\"),\n",
     "    \"hpxml_schedule_file\": os.path.join(default_input_path, \"Input Files\", \"bldg0112631_schedule.csv\"),\n",
-    "    \"weather_file\": os.path.join(default_input_path, \"Weather\", \"USA_CO_Denver.Intl.AP.725650_TMY3.epw\"),\n",
+    "    \"weather_file\": os.path.join(default_input_path, \"Weather\", \"G0800310.epw\"),\n",
     "}\n",
     "\n",
     "# Create Dwelling model\n",
@@ -192,8 +191,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The time series results include the total house power, including electricity\n",
-    "real and reactive power and natural gas consumption. Many [additional\n",
+    "The time series results include the total house power---including electricity\n",
+    "real and reactive power and natural gas consumption---building zone\n",
+    "temperatures, and unmet HVAC load. Many [additional\n",
     "results](https://ochre-nrel.readthedocs.io/en/latest/Outputs.html) can be\n",
     "saved by increasing the `verbosity` of the simulation."
    ]
@@ -211,7 +211,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Metrics include the total house electricity and natural gas energy consumed. Many [additional\n",
+    "Metrics include the total house electricity and natural gas energy consumed,\n",
+    "peak electric power, average zone temperatures, and total unmet HVAC load. Many [additional\n",
     "metrics](https://ochre-nrel.readthedocs.io/en/latest/Outputs.html#all-metrics) can be\n",
     "saved by increasing the `metrics_verbosity` of the simulation.\n"
    ]
@@ -533,7 +534,6 @@
     "        start_time=dt.datetime(2018, 1, 1, 0, 0),  # year, month, day, hour, minute\n",
     "        time_res=dt.timedelta(minutes=15),\n",
     "        duration=dt.timedelta(days=5),\n",
-    "        verbosity=1,\n",
     "        save_results=False,  # if True, must specify output_path\n",
     "        # output_path=os.getcwd(),\n",
     "        equipment_event_file=equipment_event_file,\n",
