--- a/notebook/user_tutorial.ipynb
+++ b/notebook/user_tutorial.ipynb
@@ -154,7 +154,7 @@
     "    # Timing parameters\n",
     "    \"start_time\": dt.datetime(2018, 1, 1, 0, 0),  # (year, month, day, hour, minute)\n",
     "    \"time_res\": dt.timedelta(minutes=10),         # time resolution of the simulation\n",
-    "    \"duration\": dt.timedelta(days=1),             # duration of the simulation\n",
+    "    \"duration\": dt.timedelta(days=3),             # duration of the simulation\n",
     "\n",
     "    # Input files\n",
     "    \"hpxml_file\": os.path.join(default_input_path, \"Input Files\", \"bldg0112631-up11.xml\"),\n",
@@ -245,7 +245,7 @@
     "from ochre import Analysis\n",
     "\n",
     "# Load results from previous run\n",
-    "sim_path = os.getcwd()\n",
+    "sim_path = os.path.join(default_input_path, \"Input Files\")  # location of the HPXML file\n",
     "sim_name = \"ochre\"\n",
     "df, metrics, hourly = Analysis.load_ochre(sim_path, sim_name)\n",
     "\n",
@@ -717,13 +717,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -817,7 +810,7 @@
     "    \"start_time\": dt.datetime(2018, 1, 1, 0, 0),  # year, month, day, hour, minute\n",
     "    \"time_res\": dt.timedelta(minutes=1),\n",
     "    \"duration\": dt.timedelta(days=1),\n",
-    "    \"verbosity\": 6,  # required to get setpoint and deadband in results\n",
+    "    \"verbosity\": 7,  # required to get setpoint and deadband in results\n",
     "    \"save_results\": False,  # if True, must specify output_path\n",
     "    # \"output_path\": os.getcwd(),        # Equipment parameters\n",
     "    \"Setpoint Temperature (C)\": setpoint_default,\n",
