--- a/notebook/user_tutorial.ipynb
+++ b/notebook/user_tutorial.ipynb
@@ -130,7 +130,7 @@
     "Many [additional\n",
     "inputs](https://ochre-nrel.readthedocs.io/en/latest/InputsAndArguments.html#dwelling-arguments)\n",
     "can be specified. For an example with more details, see\n",
-    "[bin/run_dwelling.py](https://github.com/NREL/OCHRE/tree/main/bin/run_dwelling.py).\n",
+    "[run_dwelling.py](https://github.com/NREL/OCHRE/tree/main/bin/run_dwelling.py).\n",
     "There are also [command line and graphical user\n",
     "interfaces](https://ochre-nrel.readthedocs.io/en/latest/Introduction.html#command-line-interface)\n",
     "for simpler use cases.\n",
@@ -308,7 +308,7 @@
     "\n",
     "This tutorial shows examples to simulate an EV and a water heater. For more\n",
     "details and examples, see\n",
-    "[bin/run_equipment.py](https://github.com/NREL/OCHRE/blob/main/bin/run_equipment.py)"
+    "[run_equipment.py](https://github.com/NREL/OCHRE/blob/main/bin/run_equipment.py)"
    ]
   },
   {
@@ -488,9 +488,9 @@
     "section](#control) for methods to run multiple simulations in parallel.\n",
     "\n",
     "For more details and examples, see\n",
-    "[bin/run_fleet.py](https://github.com/NREL/OCHRE/blob/main/bin/run_fleet.py)\n",
+    "[run_fleet.py](https://github.com/NREL/OCHRE/blob/main/bin/run_fleet.py)\n",
     "and\n",
-    "[bin/run_multiple.py](https://github.com/NREL/OCHRE/blob/main/bin/run_multiple.py)"
+    "[run_multiple.py](https://github.com/NREL/OCHRE/blob/main/bin/run_multiple.py)"
    ]
   },
   {
@@ -644,7 +644,7 @@
     "EVs, and water heaters.\n",
     "\n",
     "For more details and examples, see\n",
-    "[bin/run_external_control.py](https://github.com/NREL/OCHRE/blob/main/bin/run_external_control.py).\n",
+    "[run_external_control.py](https://github.com/NREL/OCHRE/blob/main/bin/run_external_control.py).\n",
     "There is also example code to run OCHRE in\n",
     "[co-simulation](https://github.com/NREL/OCHRE/blob/main/bin/run_cosimulation.py)\n",
     "using HELICS."
