updating branch to install for user tutorial

--- a/notebook/user_tutorial.ipynb
+++ b/notebook/user_tutorial.ipynb
@@ -68,7 +68,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install ochre-nrel"
+    "# %pip install ochre-nrel\n",
+    "%pip install git+https://github.com/NREL/OCHRE@docs-and-tutorial"
    ]
   },
   {
