updating tutorial figures and install method

--- a/notebook/user_tutorial.ipynb
+++ b/notebook/user_tutorial.ipynb
@@ -69,6 +69,8 @@
    "outputs": [],
    "source": [
     "# %pip install ochre-nrel\n",
+    "# installing from a development branch for v0.9\n",
+    "%pip uninstall -y ochre-nrel\n",
     "%pip install git+https://github.com/NREL/OCHRE@docs-and-tutorial"
    ]
   },
@@ -269,7 +271,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib\n",
+    "%matplotlib inline\n",
     "\n",
     "from ochre import CreateFigures\n",
     "\n",
@@ -483,10 +485,13 @@
    "source": [
     "## <a name=\"fleet\"></a>Simulating a fleet\n",
     "\n",
-    "OCHRE can simulate multiple homes or pieces of equipment at once to model\n",
-    "a aggregation or a fleet of devices. The following examples show how to model\n",
-    "a fleet of EVs or a set of homes sequentially. See the [following\n",
-    "section](#control) for methods to run multiple simulations in parallel.\n",
+    "OCHRE can simulate multiple homes or pieces of equipment at once to model a\n",
+    "aggregation or a fleet of devices. The following examples show how to model a\n",
+    "fleet of EVs or a set of homes sequentially. Simulations can be run\n",
+    "sequentially or in parallel (without interactions between them) using the [command line\n",
+    "interface](https://ochre-nrel.readthedocs.io/en/latest/Introduction.html#command-line-interface).\n",
+    "See the [following section](#control) to run simulations with interactions\n",
+    "through external controllers.\n",
     "\n",
     "For more details and examples, see\n",
     "[run_fleet.py](https://github.com/NREL/OCHRE/blob/main/bin/run_fleet.py)\n",
@@ -584,7 +589,9 @@
     "### <a name=\"house-fleet\"></a>Simulating multiple houses\n",
     "\n",
     "The following code will download two building models from the ResStock 2024.2\n",
-    "dataset and sequentially initialize and simulate them. "
+    "dataset and sequentially initialize and simulate them. In Google Colab, you\n",
+    "can view the input and output files by clicking the folder icon on the\n",
+    "left-hand side."
    ]
   },
   {
